# wc-virtualbum

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  requirements.txt  vercel.json  vercel_wsgi.py
backend/: Dockerfile  manage.py  pyproject.toml  requirements.txt  ruff.toml
backend/backend/: requirements.txt
backend/config/: settings.py  urls.py  wsgi.py
backend/stickers/: admin.py  models.py  serializers.py  urls.py  views.py
backend/stickers/management/commands/: add_user.py  reset_db.py  seed_data.py  seed_production.py  seed_wc26.py
backend/stickers/migrations/: 0001_initial.py  0002_user_usersticker.py  0003_alter_usersticker_user_delete_user.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  AuthContext.jsx  LoginPage.jsx  index.css
scripts/: transform_dump.py
