[project]
name = "backend"
version = "0.1.0"
description = "FIFA World Cup 26 sticker collector API"
requires-python = ">=3.14"
dependencies = [
    "Django>=5.2",
    "djangorestframework>=3.16",
    "psycopg[binary]>=3.2",
    "django-cors-headers>=4.7",
    "dj-database-url>=0.5",
    "whitenoise>=6.0",
]
